# comply54

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  funding.json  pyproject.toml  registry.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  dco.yml
.regal/: config.yaml
adapters/agt/: __init__.py  adapter.py
adapters/autogen/: __init__.py  adapter.py
adapters/crewai/: __init__.py  adapter.py
adapters/eve/: demo.ts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
adapters/eve/src/: index.ts
adapters/langchain/: __init__.py  adapter.py
comply54/: __init__.py  _version.py
comply54/autogen/: __init__.py  adapter.py
comply54/cli/: __init__.py  scan.py
comply54/core/: __init__.py  citations.py  engine.py  models.py  packs.py
comply54/crewai/: __init__.py  adapter.py
comply54/langchain/: __init__.py  adapter.py
comply54/openai_agents/: __init__.py  adapter.py
comply54/packs/africa/: egypt_pdpl.rego  ethiopia_pdp.rego  ghana_dpa.rego  kdpa.rego  mauritius_dpa.rego  popia.rego  rwanda_dpa.rego  tanzania_pdpa.rego  uganda_dppa.rego
comply54/packs/nigeria/: bvn_nin.rego  cbn.rego  naicom.rego  ndpa.rego  nfiu_aml.rego  nha.rego
comply54/packs/universal/: human_approval.rego  injection_preprocessor.py  model_routing.rego  pii_leakage.rego  prompt_injection.rego  (+1 more)
comply54/receipts/: __init__.py  _digest.py  _models.py  _signer.py  _verifier.py
comply54/sectors/: __init__.py  _base.py  kenya_fintech.py  nigeria_fintech.py  nigeria_health.py  nigeria_insurance.py  pan_african.py
docs/: cli-reference.mdx  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx  receipt-signing.mdx
docs/api-reference/: enforcement-api.mdx
docs/guides/: crewai-integration.mdx  langchain-integration.mdx  nigeria-fintech-guide.mdx  understanding-decisions.mdx
docs/integrations/: autogen.mdx  crewai.mdx  eve.mdx  langchain.mdx
docs/sector-packs/: kenya-fintech.mdx  nigeria-fintech.mdx  nigeria-health.mdx  nigeria-insurance.mdx  pan-african.mdx
examples/: README.md
examples/nigeria_fintech_agent/: agent.py  tools.py
examples/nigeria_health_agent/: agent.py  tools.py
examples/nigeria_insurance_agent/: agent.py  tools.py
schema/: policy.schema.json
tests/: test_autogen.py  test_certificate.py  test_cli_scan.py  test_engine.py  test_langchain.py  test_prompt_injection.py  test_properties.py  test_receipts.py  test_sectors.py
tools/: generate_registry.py  validate.py
(+31 files in other folders)
